--- a/index.html
+++ b/index.html
@@ -539,6 +539,15 @@
                 margin-top: 8px;
             }
         }
+
+        .price-calculation ul {
+            padding-left: 20px;
+            margin-top: 8px;
+        }
+
+        .price-calculation p {
+            margin-bottom: 4px;
+        }
     </style>
 </head>
 <body>
